added csrf protection + defined authentication pattern with h3 context + sent data to db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,5 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "Winter is Coming (Dark Blue - No Italics)"
+  "workbench.colorTheme": "Monokai Pro Light (Filter Sun)"
 }
