--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-format": "^1.0.1",
     "motion-v": "^1.7.0",
     "nuxt": "^4.0.3",
+    "nuxt-csurf": "^1.6.5",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "vee-validate": "^4.15.1",
